idf_component_register(SRCS "asset_robot.cpp" "AsyncQueue.cpp" "DisplayInterface.cpp" "ErrorUtils.cpp" 
	"ManualController.cpp" "MotorController.cpp" "NextionUtils.cpp" "SerialCommunicationUtils.c" 
	"UartUtils.c" "RobotStructure.cpp" "WdtUtils.c" "TcpUtils.c" "TcpInterface.cpp" "TcpCommands.cpp"           
	INCLUDE_DIRS ".") 